# Log_Master

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
log_master.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
log_master/assets/: __init__.py
log_master/cli/: main.py
log_master/core/: __init__.py  config.py  expression_analyzer.py  file_finder.py  log_processor.py  output_writer.py  timestamp_resolver.py
log_master/gui/: app.py
tests/: conftest.py  test_cli.py  test_expression_analyzer.py  test_file_finder.py  test_gui.py  test_log_processor.py  test_output_writer.py  test_timestamp_resolver.py
